--- a/packages/repository/package.json
+++ b/packages/repository/package.json
@@ -22,7 +22,9 @@
     "@loopback/eslint-config": "^4.0.2",
     "@loopback/testlab": "^1.8.0",
     "@types/lodash": "^4.14.138",
-    "@types/node": "^10.14.18"
+    "@types/node": "^10.14.18",
+    "@types/bson": "^4.0.0",
+    "bson": "1.0.6"
   },
   "dependencies": {
     "@loopback/context": "^1.22.1",
